# QtVideoPlayer

./: .gitignore  CMakeLists.txt  ControlPanelButton.qml  Main.qml  PlayerControls.qml  README.md  main.cpp  mediaplayerextended.cpp  mediaplayerextended.h  resources.qrc
